--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,58 @@
         <div class="end">
             <li *ngIf="!userIsAuthenticated"><a routerLink="/signup">Sign Up</a></li>
             <li *ngIf="!userIsAuthenticated"><a routerLink="/login">Log In</a></li>
-            <li *ngIf="userIsAuthenticated"><a href="#" (click)="onLogout()">Logout</a></li>
+            <li *ngIf="userIsAuthenticated" class="image" (click)="openDropdown()">
+                <img src="https://unsplash.com/photos/gN0yrOzZMDc/download?ixid=MnwxMjA3fDB8MXxhbGx8NHx8fHx8fDJ8fDE2NTI4MjMwMjY&force=true&w=640"
+                    height="32" class="pfp" width="32">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" fill="none" viewBox="0 0 24 24" class="pfp-svg"
+                    stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                </svg>
+            </li>
         </div>
     </ul>
+    <div *ngIf="!Loading && userIsAuthenticated" id="dropdown-content-user" class="dropdown-user">
+        <div class="dropdown-user-info">
+            <img src="https://unsplash.com/photos/gN0yrOzZMDc/download?ixid=MnwxMjA3fDB8MXxhbGx8NHx8fHx8fDJ8fDE2NTI4MjMwMjY&force=true&w=640"
+                height="64" class="pfp pfp-dropdown" width="64">
+            <span class="username">{{curuser.username}}</span>
+        </div>
+        <hr />
+        <div class="dropdown-user-links">
+            <button (click)="goto('user/' + this.userId)" class="dropdown-buttons">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" height="24"
+                    viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <desc>Download more icon variants from https://tabler-icons.io/i/user-circle</desc>
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <circle cx="12" cy="12" r="9"></circle>
+                    <circle cx="12" cy="10" r="3"></circle>
+                    <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"></path>
+                </svg>
+                Profile
+            </button>
+            <button class="dropdown-buttons">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24"
+                    fill="currentColor">
+                    <path
+                        d="M20 8.163A2.106 2.106 0 0 0 18.926 10c0 .789.433 1.476 1.074 1.837l-.717 2.406a2.105 2.105 0 0 0-2.218 3.058l-2.062 1.602A2.104 2.104 0 0 0 11.633 20l-3.29-.008a2.104 2.104 0 0 0-3.362-1.094l-2.06-1.615A2.105 2.105 0 0 0 .715 14.24L0 11.825A2.106 2.106 0 0 0 1.051 10C1.051 9.22.63 8.54 0 8.175L.715 5.76a2.105 2.105 0 0 0 2.207-3.043L4.98 1.102A2.104 2.104 0 0 0 8.342.008L11.634 0a2.104 2.104 0 0 0 3.37 1.097l2.06 1.603a2.105 2.105 0 0 0 2.218 3.058L20 8.162zM14.823 3.68c0-.063.002-.125.005-.188l-.08-.062a4.103 4.103 0 0 1-4.308-1.428l-.904.002a4.1 4.1 0 0 1-4.29 1.43l-.095.076A4.108 4.108 0 0 1 2.279 7.6a4.1 4.1 0 0 1 .772 2.399c0 .882-.28 1.715-.772 2.4a4.108 4.108 0 0 1 2.872 4.09l.096.075a4.104 4.104 0 0 1 4.289 1.43l.904.002a4.1 4.1 0 0 1 4.307-1.428l.08-.062A4.108 4.108 0 0 1 17.7 12.4a4.102 4.102 0 0 1-.773-2.4c0-.882.281-1.716.773-2.4a4.108 4.108 0 0 1-2.876-3.919zM10 14a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
+                    </path>
+                </svg>
+                Setting
+            </button>
+            <button (click)="onLogout()" class="dropdown-buttons">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-logout"
+                    height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <desc>Download more icon variants from https://tabler-icons.io/i/logout</desc>
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2"></path>
+                    <path d="M7 12h14l-3 -3m0 6l3 -3"></path>
+                </svg>
+                Logout
+            </button>
+        </div>
+    </div>
 </nav>
 <nav class="sm-nav">
     <ul>
