--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="floating-label-wrap">
-        <input name="username" type="text" autocomplete="off" id="username" minlength="3" ngModel #username="ngModel"
+        <input name="username" type="text" autocomplete="username" id="username" minlength="3" ngModel #username="ngModel"
             class="floating-label-field" placeholder="username" required>
         <label for="username" class="floating-label">username</label>
         <div *ngIf="username.invalid">
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="floating-label-wrap">
-        <input name="password" type="password" autocomplete="off" id="password" type="{{showPassword ? 'text' : 'password' }}" ngModel
+        <input name="password" autoComplete="current-password" type="password" autocomplete="off" id="password" type="{{showPassword ? 'text' : 'password' }}" ngModel
             #password="ngModel" class="floating-label-field password-div" maxlength="256" minlength="8"
             placeholder="Password" required>
         <label for="password" class="floating-label">Password</label>
