--- a/src/app/posts/post-show/post-show.component.html
+++ b/src/app/posts/post-show/post-show.component.html
@@ -1,10 +1,13 @@
 <div *ngIf="!Loading">
-    <h1>{{post.title}}</h1>
-    <p>{{post.content}}</p>
-    <img class="post-image" *ngIf="post.imagePath" [src]="post.imagePath" [alt]="post.title" loading="lazy">
+    <a class="username" routerLink="/user/{{post.creator}}">
+        by: {{post.creatorname}}
+    </a>
+    <p class="post-text">{{post.content}}</p>
+    <img class="post-image" *ngIf="post.imagePath" [src]="post.imagePath" [alt]="post.content.substring(0, 10)"
+        loading="lazy">
     <div class="post-actions">
         <div class="heart-container">
-            <button class="icon-button" (click)="toggleLike(post.id)">
+            <button class="icon-button heartbtn" (click)="toggleLike(post.id)">
                 <div id="heart-container">
                     <div *ngIf="post.likes.includes(userId) == false" class="heart">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -4 24 24" width="24" fill="currentColor">
@@ -34,7 +37,8 @@
         <div :id="dropdown{{post.id}}-1" class="dropdown-content">
             <a class="dropdown-item" (click)="copyLink(post.id)">Copy Link</a>
         </div>
-        <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')" id="dropbtn" class="icon-button">
+        <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')"
+            id="dropbtn" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -9 24 24" width="24" fill="currentColor">
                 <path
                     d="M3 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm-7 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6z">
@@ -73,10 +77,10 @@
 </div>
 <div multi="true" *ngIf="replies.length > 0">
     <div class="post-div" *ngFor="let reply of replies">
-        <p>{{reply.content}}</p>
+        <p class="post-text">{{reply.content}}</p>
         <div class="post-actions">
             <div class="heart-container">
-                <button class="icon-button" (click)="toggleReplyLike(reply.id)">
+                <button class="icon-button heartbtn" (click)="toggleReplyLike(reply.id)">
                     <div :id="heart-container{{reply.id}}">
                         <div *ngIf="reply.likes.includes(userId) == false" class="heart">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -4 24 24" width="24"
@@ -98,7 +102,8 @@
                 </button>
                 <label class="heart-count">{{reply.likes.length}}</label>
             </div>
-            <button *ngIf="userIsAuthenticated && userId === reply.creator" (click)="openDropdown(reply.id + '-1')" id="dropbtn" class="icon-button">
+            <button *ngIf="userIsAuthenticated && userId === reply.creator" (click)="openDropdown(reply.id + '-1')"
+                id="dropbtn" class="icon-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -9 24 24" width="24" fill="currentColor">
                     <path
                         d="M3 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm-7 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6z">
