--- a/src/app/users/user-show/user-show.component.css
+++ b/src/app/users/user-show/user-show.component.css
@@ -6,3 +6,144 @@
 .followers {
     margin-right: 1.25rem;
 }
+
+.post-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 0 20px;
+    border-radius: 0.375rem;
+    border: 1px solid var(--md-sys-color-post-outline);
+    background: var(--md-sys-color-surface);
+    color: var(--md-sys-color-on-surface);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    margin-bottom: 1.75rem;
+    margin-top: 1.75rem;
+    white-space: pre-wrap;
+    /* css-3 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
+    transition: border-color 150ms ease-in-out;
+    cursor: pointer;
+}
+
+.post-div:hover {
+    border: 1px solid var(--md-sys-color-post-outline-hover);
+}
+
+.post-div a {
+    color: var(--md-sys-color-on-background);
+    text-decoration: none;
+}
+
+.post-div a:hover {
+    text-decoration: none;
+}
+
+.post-image {
+    width: 100%;
+}
+
+.post-image img {
+    width: fit-content;
+    max-width: 100%;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.dropdown-content {
+    background-color: var(--md-sys-color-background);
+    color: var(--md-sys-color-on-background);
+    visibility: hidden;
+    position: absolute;
+    opacity: 0;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 5;
+    transition: all 0.2s;
+    border-radius: 8px;
+    border: 1px solid rgb(31 41 55);
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+@media (max-width: 590px) {
+    .dropdown-content {
+        /* make sure the dropdown is on the other line than the icons with flex */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        margin-top: 2.75rem;
+        right: 0;
+    }
+}
+
+.show {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+}
+
+.dropdown-item {
+    padding: 0.5rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
+    background-color: var(--md-sys-color-background);
+    color: var(--md-sys-color-on-background);
+}
+
+.dropdown-item:hover {
+    text-decoration: none;
+    background-color: var(--md-sys-color-input);
+}
+
+.heart-container {
+    display: -webkit-inline-flex;
+    /* Safari */
+    display: inline-flex;
+    -webkit-align-items: center;
+    /* Safari 7.0+ */
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+.comment-container {
+    display: -webkit-inline-flex;
+    /* Safari */
+    display: inline-flex;
+    -webkit-align-items: center;
+    /* Safari 7.0+ */
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+.comment-count {
+    color: #00a8ff;
+    margin-right: 0.25rem;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
