--- a/src/styles.css
+++ b/src/styles.css
@@ -163,6 +163,7 @@ body {
   background-color: var(--md-sys-color-background);
   padding: 0;
   margin: 0;
+  text-rendering: optimizeSpeed;
   font-family: 'Nunito Sans', sans-serif;
   line-height: var(--md-sys-typescale-body1-line-height);
   font-size: var(--md-sys-typescale-body1-size);
@@ -271,6 +272,12 @@ input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"]) {
   color: var(--md-sys-color-on-background);
   border-radius: 4px;
   padding: 12px 16px 14px;
+}
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill, input:-internal-autofill-selected {
+  background-color: var(--md-sys-color-background) !important;
+  background-image: none !important;
+  color: var(--md-sys-color-on-background) ;
 }
 
 textarea {
@@ -500,26 +507,12 @@ input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"]):foc
   animation: likeAnimation 175ms linear;
 }
 
-.unlikeAnimation {
-  animation: unlikeAnimation 175ms linear;
-}
-
 @keyframes likeAnimation {
   0% {
-    transform: scaleY(1.35);
+    transform: scaleY(1.35) scaleX(1.35);
   }
 
   100% {
-    transform: scaleY(1);
-  }
-}
-
-@keyframes unlikeAnimation {
-  0% {
-    transform: scaleY(1.35);
-  }
-
-  100% {
-    transform: scaleY(1);
+    transform: scaleY(1) scaleX(1);
   }
 }
