--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,18 +1,15 @@
-:root {
-    --md-nav-height: 52px;
-    --sm-nav-height: 48px;
-}
-
-.md-nav {
+.md-nav, .slideout-nav, .sm-nav {
     display: none;
 }
 
-.sm-nav {
-    display: none;
+svg {
+    color: var(--md-sys-color-on-background)
 }
 
-.slideout-nav {
-    display: none;
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 @media (max-width: 380px) {
@@ -20,16 +17,12 @@
         width: 100% !important;
         top: -120% !important;
         left: 0 !important;
-        background-color: var(--md-sys-color-background) !important;
+        background: var(--md-sys-color-background) !important;
     }
 
     .active {
         display: block !important;
         top: 0 !important;
-    }
-
-    .overlay-active {
-        display: none !important;
     }
 }
 
@@ -43,15 +36,13 @@
         position: fixed;
         top: 0;
         z-index: 25;
-        background-color: var(--md-sys-color-background);
-        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+        background: var(--md-sys-color-background);
+        box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
         justify-content: center;
         align-items: center;
     }
 
     .slideout-nav ul {
-        list-style: none;
-        padding: 0;
         flex-direction: column;
         width: fit-content;
         text-align: center;
@@ -69,31 +60,11 @@
         cursor: pointer;
     }
 
-    .slideout-nav ul li a {
-        color: var(--md-sys-color-on-background);
-    }
-
     .close {
         position: absolute;
         top: 1.25rem;
         right: 1.25rem;
         cursor: pointer;
-    }
-
-    .overlay {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: var(--md-sys-color-background);
-        opacity: 0.5;
-        z-index: 15;
-        display: none;
-    }
-
-    .overlay-active {
-        display: block;
     }
 
     .active {
@@ -102,20 +73,15 @@
 
     .sm-nav {
         display: block;
-        flex-direction: row;
-        background-color: var(--md-sys-color-background);
+        background: var(--md-sys-color-background);
         padding: 1.25rem;
-        height: var(--md-nav-height);
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        max-height: var(--md-sys-nav-height);
+        height: fit-content;
+        box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+        max-height: 52px;
     }
 
     .sm-nav ul, .sm-nav ul .end {
         display: flex;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        flex-direction: row;
     }
 
     .sm-nav ul li svg {
@@ -134,20 +100,14 @@
 @media (min-width: 768px) {
     .md-nav {
         display: flex;
-        flex-direction: row;
-        background-color: var(--md-sys-color-background);
+        background: var(--md-sys-color-background);
         padding: 1.25rem;
-        height: var(--md-nav-height);
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        max-height: var(--md-sys-nav-height);
+        box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+        max-height: 52px;
     }
 
     .md-nav ul, .md-nav ul .end {
         display: flex;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        flex-direction: row;
     }
 
     .end {
@@ -159,19 +119,9 @@
         margin-right: 1.75rem;
     }
 
-    .md-nav ul li a {
-        color: var(--md-sys-color-on-background);
-        text-decoration: none;
-    }
-
-    .md-nav ul li a:hover {
-        text-decoration: underline;
-    }
-
     .brandName {
         font-size: 1.25rem;
         font-weight: 600;
-        color: var(--md-sys-color-on-background);
     }
 
     .pfp {
@@ -180,7 +130,6 @@
     }
 
     .pfp-svg {
-        /* center the svg vertically */
         margin: 10% 0;
     }
 
@@ -191,11 +140,11 @@
     .dropdown-user {
         visibility: hidden;
         width: 15rem;
-        height: 17rem;
+        height: 16.5rem;
         border: 1px solid var(--md-sys-color-dropdown-background-outline);
         padding: .5rem;
         border-radius: 8px;
-        background-color: var(--md-sys-color-background);
+        background: var(--md-sys-color-background);
         position: absolute;
         right: 1.25rem;
         margin-top: 3.75rem;
@@ -207,11 +156,11 @@
 
     .active {
         visibility: visible;
-        animation: rolldown 350ms;
+        animation: rolldown 350ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
     }
 
     .leaving {
-        animation: rollup 350ms;
+        animation: rollup 350ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
     }
 
     .dropdown-user-info {
@@ -223,8 +172,6 @@
     .username {
         position: relative;
         top: 0.25rem;
-        width: fit-content;
-        margin: 0;
         font-size: large;
     }
 
@@ -236,18 +183,16 @@
     .dropdown-buttons {
         min-width: 100% !important;
         max-height: 48px;
-        margin-left: 0 !important;
-        margin-top: 0 !important;
+        margin: 0 !important;
         text-transform: none !important;
         text-align: unset !important;
-        background-color: var(--md-sys-color-background) !important;
+        background: var(--md-sys-color-background) !important;
         box-shadow: none !important;
         color: var(--md-sys-color-on-background) !important;
         padding: 14px 16px;
         height: fit-content !important;
     }
 
-    /* prefers dark mode */
     @media (prefers-color-scheme: dark) {
         .dropdown-buttons:hover {
             filter: brightness(120%) !important;
@@ -269,29 +214,26 @@
     .dropdown-user-links {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        padding-top: 0.75rem;
-        padding-bottom: 0.75rem;
-        height: calc(100% - 1rem - 44px - 1rem - 0.75rem);
+        padding: 0.75rem 0;
     }
 
     @keyframes rolldown {
         0% {
-            height: 0px;
+            height: 0;
         }
 
         100% {
-            height: 15rem;
+            height: 16.5rem;
         }
     }
 
     @keyframes rollup {
         0% {
-            height: 15rem;
+            height: 16.5rem;
         }
 
         100% {
-            height: 0px;
+            height: 0;
         }
     }
 }
