--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,5 +1,5 @@
 :host {
-  Display: block;
+  display: block;
   margin-top: 1rem;
 }
 
@@ -10,7 +10,6 @@
 .warn {
   background-color: red;
   color: white;
-  /* center button to the right */
   margin-left: auto;
   width: fit-content;
 }
@@ -23,28 +22,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 auto;
+  margin: 1.75rem auto;
   max-width: 800px;
-  padding: 0 20px;
+  padding: 0.75rem 20px;
   border-radius: 0.375rem;
   border: 1px solid var(--md-sys-color-post-outline);
   background: var(--md-sys-color-surface);
   color: var(--md-sys-color-on-surface);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  margin-bottom: 1.75rem;
-  margin-top: 1.75rem;
   white-space: pre-wrap;
-  /* css-3 */
   white-space: -moz-pre-wrap;
-  /* Mozilla, since 1999 */
   white-space: -pre-wrap;
-  /* Opera 4-6 */
   white-space: -o-pre-wrap;
-  /* Opera 7 */
   word-wrap: break-word;
-  /* Internet Explorer 5.5+ */
   transition: border-color 150ms ease-in-out;
   cursor: pointer;
 }
