--- a/src/app/users/user-show/user-show.component.html
+++ b/src/app/users/user-show/user-show.component.html
@@ -1,14 +1,28 @@
 <div *ngIf="!Loading" class="user-info">
     <h1>{{user.username}}</h1>
     <p *ngIf="user.description">{{user.description}}</p>
-    <div>
-        <span class="followers">Followers: <b>{{user.followers.length}}</b></span><span>Follwoing:
-            <b>{{user.following.length}}</b></span>
+    <div class="followers">
+        <span>
+            Followers: <b>{{user.followers.length}}</b>
+        </span>
+        <span>
+            Follwoing: <b>{{user.following.length}}</b>
+        </span>
     </div>
-    <button (click)="toggleFollow()" class="icon-button" *ngIf="!isCurrentUser">
-        <span *ngIf="following">unFollow</span>
-        <span *ngIf="!following">Follow</span>
-    </button>
+    <div class="user-actions">
+        <button (click)="toggleFollow()" class="icon-button" *ngIf="!isCurrentUser">
+            <svg *ngIf="following" xmlns="http://www.w3.org/2000/svg" width="24px" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M13 7a4 4 0 11-8 0 4 4 0 018 0zM9 14a6 6 0 00-6 6v1h12v-1a6 6 0 00-6-6zM21 12h-6" />
+            </svg>
+            <svg *ngIf="!following" xmlns="http://www.w3.org/2000/svg" width="24px" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor" stroke-width="2">
+                <path strokeLinecap="round" strokeLinejoin="round"
+                    d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
+            </svg>
+        </button>
+    </div>
 </div>
 <div *ngIf="Loading">
     <div class="lds-ring">
@@ -20,9 +34,9 @@
 </div>
 <div multi="true" id="posts" *ngIf="posts.length">
     <div class="post-div" *ngFor="let post of posts" (click)="gotoPost(post.id)">
-        <a class="username" routerLink="/user/{{post.creator}}">
-            by: {{post.creatorname}}
-        </a>
+        <p class="username">by:
+            <a routerLink="/user/{{post.creator}}">{{post.creatorname}}</a>
+        </p>
         <p class="post-text">{{post.content}}</p>
         <div *ngIf="post.imagePath" class="post-image">
             <img [src]="post.imagePath" [alt]="post.content.substring(0, 10)" loading="lazy">
