--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,8 +1,8 @@
 <div multi="true" (scroll)="onScroll($event)" id="posts" *ngIf="posts.length">
     <div class="post-div" *ngFor="let post of posts" (click)="gotoPost(post.id)">
-        <a class="username" routerLink="/user/{{post.creator}}">
-            by: {{post.creatorname}}
-        </a>
+        <p class="username">by:
+            <a routerLink="/user/{{post.creator}}">{{post.creatorname}}</a>
+        </p>
         <p class="post-text">{{post.content}}</p>
         <div *ngIf="post.imagePath" class="post-image">
             <img [src]="post.imagePath" [alt]="post.content.substring(0, 10)" loading="lazy">
