--- a/src/app/users/user-show/user-show.component.css
+++ b/src/app/users/user-show/user-show.component.css
@@ -1,4 +1,5 @@
 .user-info {
+    width: 100%;
     border-bottom: 1px solid var(--md-sys-color-post-outline);
     margin-bottom: 0.5rem;
 }
@@ -146,4 +147,8 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.user-actions {
+    width: fit-content;
 }
