--- a/src/app/posts/post-show/post-show.component.html
+++ b/src/app/posts/post-show/post-show.component.html
@@ -3,8 +3,9 @@
         <a routerLink="/user/{{post.creator}}">{{post.creatorname}}</a>
     </p>
     <p class="post-text">{{post.content}}</p>
-    <img class="post-image" *ngIf="post.imagePath" [src]="post.imagePath" [alt]="post.content.substring(0, 10)"
-        loading="lazy">
+    <div *ngIf="post.imagePath" class="post-image">
+        <img crossorigin="anonymous" [src]="post.imagePath" [alt]="post.content.substring(0, 10)" loading="lazy">
+    </div>
     <div *ngIf="userIsAuthenticated" class="post-actions">
         <div class="heart-container">
             <button class="icon-button heartbtn" (click)="toggleLike(post.id)">
