--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header *ngIf="!router.url.includes('login') && !router.url.includes('signup')"></app-header>
 <main>
     <router-outlet></router-outlet>  
     <router-outlet name="secondary"></router-outlet>
