--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -1,16 +1,18 @@
 .login-form {
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 350px;
     min-width: min-content;
     width: 90%;
     padding: 1.25rem;
-    border-radius: 1.25rem;
+    border-radius: 8px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .password-div {
-    position: relative;   
+    position: relative;
     pointer-events: all;
 }
 
@@ -21,9 +23,13 @@
     cursor: pointer;
     color: #ccc;
     position: absolute;
-    right: calc(0px + 16%);
+    right: calc(0px + 8%);
     top: calc(48px / 3.25);
     width: 24px;
     height: 24px;
     z-index: 5;
+}
+
+.login-options {
+    margin-top: 0.75rem;
 }
