--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -3,16 +3,17 @@
 <form (submit)="onlogin(loginform)" #loginform="ngForm" [class.error]="loginform.submitted && loginform.invalid"
     class="login-form">
     <div class="floating-label-wrap">
-        <input name="emailusername" type="text" autocomplete="username" id="emailusername" ngModel #emailusername="ngModel"
-            class="floating-label-field" placeholder="Email or username" required>
+        <input name="emailusername" type="text" autocomplete="username" id="emailusername" ngModel
+            #emailusername="ngModel" class="floating-label-field" placeholder="Email or username" required>
         <label for="emailusername" class="floating-label">Email or username</label>
         <div *ngIf="emailusername.invalid">
             <p class="error-text" *ngIf="emailusername.errors['required']">user or email is required</p>
         </div>
     </div>
     <div class="floating-label-wrap">
-        <input name="password" autoComplete="current-password" type="{{showPassword ? 'text' : 'password' }}" id="password" ngModel #password="ngModel" class="floating-label-field password-div"
-            maxlength="256" minlength="8" placeholder="Password" required>
+        <input name="password" autoComplete="current-password" type="{{showPassword ? 'text' : 'password' }}"
+            id="password" ngModel #password="ngModel" class="floating-label-field password-div" maxlength="256"
+            minlength="8" placeholder="Password" required>
         <label for="password" class="floating-label">Password</label>
         <a class="password-toggle" (click)="togglePassword()">
             <svg *ngIf="showPassword" class="eye-b" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24"
@@ -32,5 +33,7 @@
             <p class="error-text" *ngIf="password.errors['required']">Password is required</p>
         </div>
     </div>
-    <button>Login</button> or <a routerLink="/signup">Sign Up</a>
+    <div class="login-options">
+        <button>Login</button> or <a routerLink="/signup">Sign Up</a>
+    </div>
 </form>
