--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -3,8 +3,8 @@
 <form (submit)="onsignup(signupform)" #signupform="ngForm" [class.error]="signupform.submitted && signupform.invalid"
     class="login-form">
     <div class="floating-label-wrap">
-        <input name="email" type="email" id="email" autocomplete="off" ngModel #email="ngModel" class="floating-label-field"
-            placeholder="Email" required>
+        <input name="email" type="email" id="email" autocomplete="off" ngModel #email="ngModel"
+            class="floating-label-field" placeholder="Email" required>
         <label for="email" class="floating-label">Email</label>
         <div *ngIf="email.invalid">
             <p class="error-text" *ngIf="email.errors['required']">email is required</p>
@@ -12,8 +12,8 @@
         </div>
     </div>
     <div class="floating-label-wrap">
-        <input name="username" type="text" autocomplete="username" id="username" minlength="3" ngModel #username="ngModel"
-            class="floating-label-field" placeholder="username" required>
+        <input name="username" type="text" autocomplete="username" id="username" minlength="3" ngModel
+            #username="ngModel" class="floating-label-field" placeholder="username" required>
         <label for="username" class="floating-label">username</label>
         <div *ngIf="username.invalid">
             <p class="error-text" *ngIf="username.errors['required']">username is required</p>
@@ -21,9 +21,9 @@
         </div>
     </div>
     <div class="floating-label-wrap">
-        <input name="password" autoComplete="current-password" type="password" autocomplete="off" id="password" type="{{showPassword ? 'text' : 'password' }}" ngModel
-            #password="ngModel" class="floating-label-field password-div" maxlength="256" minlength="8"
-            placeholder="Password" required>
+        <input name="password" autoComplete="current-password" type="password" autocomplete="off" id="password"
+            type="{{showPassword ? 'text' : 'password' }}" ngModel #password="ngModel"
+            class="floating-label-field password-div" maxlength="256" minlength="8" placeholder="Password" required>
         <label for="password" class="floating-label">Password</label>
         <a class="password-toggle" (click)="togglePassword()">
             <svg *ngIf="showPassword" class="eye-b" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24" width="24"
@@ -45,5 +45,7 @@
             <p class="error-text" *ngIf="password.errors['maxlength']">Password is too long</p>
         </div>
     </div>
-    <button>Sign Up</button> or <a routerLink="/login">Login</a>
+    <div class="signup-options">
+        <button>Sign Up</button> or <a routerLink="/login">Login</a>
+    </div>
 </form>
