--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,8 +2,12 @@
     display: none;
 }
 
-svg {
+svg:not(.icon-button) {
     color: var(--md-sys-color-on-background)
+}
+
+.icon-button {
+    margin: 0;
 }
 
 ul {
@@ -106,13 +110,18 @@ ul {
         max-height: 52px;
     }
 
-    .md-nav ul, .md-nav ul .end {
+    .md-nav ul, .md-nav .end {
         display: flex;
     }
 
     .end {
         position: absolute;
+        top: 0.80rem;
         right: 0;
+    }
+
+    .end div {
+        margin-right: 1.75rem;
     }
 
     .md-nav ul li {
@@ -134,6 +143,7 @@ ul {
     }
 
     .image {
+        margin-top: 0.25rem;
         cursor: pointer;
     }
 
