--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,7 @@
     --md-sys-color-outline: #73777f;
     --md-sys-color-background: #fdfcff;
     --md-sys-color-on-background: #1a1c1e;
+    --md-sys-color-background-darkened: #e6e6e6;
     --md-sys-color-surface: #fdfcff;
     --md-sys-color-on-surface: #1a1c1e;
     --md-sys-color-surface-variant: #dfe3eb;
@@ -144,6 +145,7 @@
     --md-sys-color-outline: #8c9199;
     --md-sys-color-background: #1a1c1e;
     --md-sys-color-on-background: #e2e2e6;
+    --md-sys-color-background-darkened: #181a1c;
     --md-sys-color-surface: #1a1c1e;
     --md-sys-color-on-surface: #e2e2e6;
     --md-sys-color-surface-variant: #42474e;
